<resources>
    <string name="app_name">Movies</string>
    <string name="poster_of_movie">Постер к фильму</string>
    <string name="most_popular">Самые популярные</string>
    <string name="top_rated">Наиболее рейтинговые</string>
    <string name="image_title">Название:</string>
    <string name="original_title">Оригинальное название</string>
    <string name="rating">Рейтинг:</string>
    <string name="release_date">Дата выхода:</string>
    <string name="description">Описание:</string>
    <string name="add_to_favorite">Добавлено в избранное!</string>
    <string name="remove_from_favorite">Удалено из избранного</string>
    <string name="item_main">Главная</string>
    <string name="item_favourite">Избранное</string>
    <string name="start_trailer">Запустить видео</string>
</resources>
