<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="8dp">

        <ImageView
            android:id="@+id/imageView_big_poster"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@tools:sample/avatars[0]" />

        <TextView
            android:id="@+id/textView_label_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/image_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textView_title" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineCenter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

        <TextView
            android:id="@+id/textView_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="TextView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guidelineCenter"
            app:layout_constraintTop_toBottomOf="@+id/image_add_to_favorite" />

        <TextView
            android:id="@+id/textView_original_label_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/original_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_title" />

        <TextView
            android:id="@+id/textView_original_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="TextView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guidelineCenter"
            app:layout_constraintTop_toBottomOf="@+id/textView_title" />

        <TextView
            android:id="@+id/textView_label_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rating"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_original_title" />

        <TextView
            android:id="@+id/textView_rating"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="TextView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guidelineCenter"
            app:layout_constraintTop_toBottomOf="@+id/textView_original_title" />

        <TextView
            android:id="@+id/textView_label_release_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/release_date"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_rating" />

        <TextView
            android:id="@+id/textView_release_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="TextView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guidelineCenter"
            app:layout_constraintTop_toBottomOf="@+id/textView_rating" />

        <TextView
            android:id="@+id/textView_label_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_release_date" />

        <TextView
            android:id="@+id/textView_overview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TextView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_label_description" />

        <ImageView
            android:id="@+id/image_add_to_favorite"
            android:onClick="onClickChangeFavourite"
            android:layout_width="wrap_content"
            android:layout_marginRight="16dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/imageView_big_poster"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView_big_poster"
            app:srcCompat="@drawable/icons8_48" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>